ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7/input.ts.stderr
error: `declare` modifier not allowed for code already in an ambient context
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7/input.ts:2:3
  |
2 |   declare class C {
  |   ^^^^^^^

